# shingan

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
crates/shingan-cli/: Cargo.toml
crates/shingan-cli/src/: main.rs
crates/shingan-core/: Cargo.toml
crates/shingan-core/src/: cache.rs  enrichment.rs  error.rs  file_info.rs  lib.rs
crates/shingan-core/src/detector/: archive.rs  code.rs  document.rs  image.rs  mod.rs  video.rs
crates/shingan-core/src/scanner/: duplicate.rs  grouping.rs  mod.rs
crates/shingan-core/tests/fixtures/: test_copy.txt
crates/shingan-db/: Cargo.toml
crates/shingan-db/src/: lib.rs  models.rs  repository.rs  schema.rs
crates/shingan-gui/: Cargo.toml
crates/shingan-gui/src/: app.rs  main.rs  theme.rs
crates/shingan-gui/src/tabs/: auto_sorter.rs  duplicate_finder.rs  mod.rs  settings.rs
crates/shingan-gui/src/views/: duplicate_group.rs  file_preview.rs  mod.rs  results_viewer.rs
crates/shingan-ml/: Cargo.toml
crates/shingan-ml/src/: cloud.rs  lib.rs  model_paths.rs  model_registry.rs  onnx.rs  pipeline.rs  taxonomy.rs  tier0.rs  tier1.rs
crates/shingan-utils/: Cargo.toml
crates/shingan-utils/src/: auto_sorter.rs  lib.rs  ml_categorizer.rs
