[package]
name = "shingan-cli"
version.workspace = true
edition.workspace = true
repository = "https://github.com/rc-basilisk/shingan"
homepage = "https://github.com/rc-basilisk/shingan"
description = "CLI for shingan - high-performance file deduplication and organization toolkit"

[[bin]]
name = "shingan"
path = "src/main.rs"

[dependencies]
shingan-core.workspace = true
shingan-db.workspace = true
shingan-utils.workspace = true
shingan-ml.workspace = true
clap.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true
walkdir.workspace = true
anyhow = "1"
