[package]
name = "shingan-gui"
version.workspace = true
edition.workspace = true
repository = "https://github.com/rc-basilisk/shingan"
homepage = "https://github.com/rc-basilisk/shingan"
description = "GUI for shingan - high-performance file deduplication and organization toolkit"

[[bin]]
name = "shingan-gui"
path = "src/main.rs"

[dependencies]
shingan-core.workspace = true
shingan-db.workspace = true
shingan-utils.workspace = true
shingan-ml.workspace = true
iced.workspace = true
rfd.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
image.workspace = true
crossbeam-channel.workspace = true
walkdir.workspace = true
reqwest.workspace = true
futures = "0.3"
syntect.workspace = true
