[package]
name = "shingan-ml"
version.workspace = true
edition.workspace = true

[features]
default = ["onnx"]
onnx = ["dep:ort", "dep:ndarray"]
cloud-ollama = ["dep:reqwest"]
cloud-openai = ["dep:reqwest"]
cloud-gemini = ["dep:reqwest"]

[dependencies]
shingan-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true
img_hash = { workspace = true }
image_for_hash = { package = "image", version = "0.23", default-features = true }
parking_lot.workspace = true
dirs.workspace = true

ort = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

reqwest = { workspace = true, optional = true, features = ["json", "blocking"] }

[dev-dependencies]
tempfile = "3"
